examples/errors/7_parse_bool/layout.tml
#use <definitions.tmd>

<Window allow_resize=0/>